--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
 					<td><span class="renderSplatCount">-</span> / <span class="visibleSplatCount">-</span> / <span
 							class="modelSplatCount">-</span></td>
 				</tr>
-				<tr>
+				<tr class="tr-pc-only">
 					<td>models:</td>
 					<td><span class="renderModels">-</span> / <span class="models">-</span></td>
 				</tr>
-				<tr>
+				<tr class="tr-pc-only">
 					<td>scene:</td>
 					<td><span class="scene"></span> <span class="updateSceneData"></span></td>
 				</tr>
