--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 							title="仅小场景适用">过渡</span></td>
 					</td>
 				</tr>
-				<tr class="tr-data">
+				<tr class="tr-data tr-pc-only">
 					<td><span class="add-lightFactor" title="Increase the brightness by 10%">＋</span><span
 							class="default-lightFactor" style="width: 80px;"
 							title="use default brightness">默认亮度</span><span class="sub-lightFactor"
