--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 <body style="background: black;height: 100vh;margin: 0px;overflow: hidden;">
 	<div id="gsviewer">
-		<div class="logo loading prd-mode" onclick="window.open('https://reall3d.com', '_blank');"
-			style="position: absolute;top: 30px;left: 20px; width: 40px;height: 40px;z-index:9999;display: none;cursor: pointer;">
+		<div class="logo loading" onclick="window.open('https://reall3d.com', '_blank');"
+			style="position: absolute;top: 30px;left: 20px; width: 40px;height: 40px;z-index:9999;cursor: pointer;">
 			<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
 				viewBox="0 0 218.18 216.86">
 				<defs>
