--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 							style="width: 80px;" title="在bin模型中内嵌文字水印,模拟模型产权保护">天际阁</span></td>
 				</tr>
 				<tr class="tr-data">
-					<td><span class="demo3" style="width: 80px;" title="50M 大小的 .sp20 模型,相机按预定轨迹飞行">大街景</span> <span
+					<td><span class="demo3" style="width: 80px;" title="37.7M, 2.5 million points">大街景</span> <span
 							class="demo4" style="width: 80px;" title="在bin模型中内嵌模型水印,模拟模型产权保护">宝章阁</span></td>
 				</tr>
 				<tr class="tr-data tr-pc-only">
@@ -178,7 +178,8 @@
 				</tr>
 				<tr class="tr-data">
 					<td>
-						<span class="big-lod" title="大规模科创城片区">大场景LOD</span>
+						<span class="big-lod"
+							title="Large scene rendering based on LOD (534M, 33.4 million points)">大场景LOD</span>
 						<!-- <span class="show-map" title="地图">MAP</span> -->
 					</td>
 				</tr>
