--- a/index.html
+++ b/index.html
@@ -138,18 +138,21 @@
 		<div class="operation dev-panel prd-mode" style="border-radius:5px;display: none;">
 			<table style="width:135px;text-align:center;font-size: 13px;">
 				<tr>
-					<td><span class="switch-debug" style="background-color: darkorchid;" title="展开/收起 操作信息面板">－</span>
-						测试面板
-						<span class="op-show" style="background-color: darkorchid;" title="展开/收起 操作测试面板">－</span>
+					<td><span class="switch-debug" style="background-color: darkorchid;"
+							title="Hide/Show the info panel">－</span>
+						TEST PANEL
+						<span class="op-show" style="background-color: darkorchid;"
+							title="Hide/Show the test panel">－</span>
 					</td>
 				</tr>
 				<tr class="tr-data">
 					<td>----------------</td>
 				</tr>
 				<tr class="tr-data">
-					<td><span class="switch-rotate" title="开始/停止 旋转">旋转</span> <span
-							class="switch-pointcloudMode">点云</span> <span class="switch-deiplay-mode"
-							title="仅小场景适用">过渡</span></td>
+					<td><span class="switch-rotate" title="Start/Stop rotate">旋转</span> <span
+							class="switch-pointcloudMode" title="Toggle pointcloud mode">点云</span> <span
+							class="switch-deiplay-mode" title="Toggle pointcloud mode with transition effec">过渡</span>
+					</td>
 					</td>
 				</tr>
 				<tr class="tr-data tr-pc-only">
@@ -162,18 +165,19 @@
 					<td>----- demo -----</td>
 				</tr>
 				<tr class="tr-data">
-					<td><span class="demo1" style="width: 80px;" title="小模型含标注测量">小圆桌</span> <span class="demo2"
-							style="width: 80px;" title="在bin模型中内嵌文字水印,模拟模型产权保护">天际阁</span></td>
+					<td><span class="demo1" style="width: 80px;" title="Demo of mark and measurements">小圆桌</span> <span
+							class="demo2" style="width: 80px;" title="Demo of embedded text watermarking">天际阁</span>
+					</td>
 				</tr>
 				<tr class="tr-data">
-					<td><span class="demo3" style="width: 80px;" title="37.7M, 2.5 million points">大街景</span> <span
-							class="demo4" style="width: 80px;" title="在bin模型中内嵌模型水印,模拟模型产权保护">宝章阁</span></td>
+					<td><span class="demo3" style="width: 80px;" title="Demo of flying">大街景</span> <span class="demo4"
+							style="width: 80px;" title="Demo of embedded splat as watermarking">宝章阁</span></td>
 				</tr>
 				<tr class="tr-data tr-pc-only">
 					<td>
-						<span class="show-watermark" title="show watermark">＋</span> <input type="text" class="gstext"
-							style="width:50px" value="" placeholder="水印文字" title="Enter text to view watermark effect">
-						</input><span class="hide-watermark" title="hide watermark">－</span>
+						<span class="show-watermark" title="show watermarks">＋</span> <input type="text" class="gstext"
+							style="width:50px" value="" placeholder="watermark" title="Enter text as watermarking">
+						</input><span class="hide-watermark" title="hide watermarks">－</span>
 					</td>
 				</tr>
 				<tr class="tr-data">
@@ -187,21 +191,25 @@
 					<td>------ 标注 ------</td>
 				</tr>
 				<tr class="tr-data tr-pc-only">
-					<td><span class="mark-hide">隐</span>　<span class="mark-show">显</span>　<span
-							class="mark-save">存</span>　<span class="mark-del">删</span></td>
+					<td><span class="mark-hide" title="Hide marks">隐</span>　<span class="mark-show"
+							title="Show marks">显</span>　<span class="mark-save" title="Save marks">存</span>　<span
+							class="mark-del" title="Delete marks">删</span></td>
 				</tr>
 				<tr class="tr-data tr-pc-only">
-					<td><span class="mark-distance">长</span> <span class="mark-point">点</span> <span
-							class="mark-lines">线</span> <span class="mark-plans">面</span> <span
-							class="mark-circle">圆</span></td>
+					<td><span class="mark-distance" title="mark distance">长</span> <span class="mark-point"
+							title="mark point">点</span> <span class="mark-lines" title="mark lines">线</span> <span
+							class="mark-plans" title="mark plans">面</span> <span class="mark-circle"
+							title="mark circle">圆</span></td>
 				</tr>
 				<tr class="tr-data tr-pc-only">
 					<td>------ 轨迹 ------</td>
 				</tr>
 				<tr class="tr-data tr-pc-only">
-					<td><span class="add-pos" title="添加当前相机位置作为飞行轨迹点之一">加点</span> <span class="clear-pos"
-							title="清空飞行轨迹点">清空</span> <span class="fly" title="按轨迹飞行">飞</span> <span class="fly-save"
-							title="保存飞行轨迹点">存</span>
+					<td><span class="add-pos"
+							title="Add the current camera position as one of the flight path points">加点</span> <span
+							class="clear-pos" title="Clear the flight path points">清空</span> <span class="fly"
+							title="Start flying">飞</span> <span class="fly-save"
+							title="Save the flight path points">存</span>
 					</td>
 				</tr>
 			</table>
