--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 					</td>
 				</tr>
 				<tr class="tr-data tr-pc-only">
-					<td>------ 标注 ------</td>
+					<td>----- marks -----</td>
 				</tr>
 				<tr class="tr-data tr-pc-only">
 					<td><span class="mark-hide" title="Hide marks">隐</span>　<span class="mark-show"
@@ -202,7 +202,7 @@
 							title="mark circle">圆</span></td>
 				</tr>
 				<tr class="tr-data tr-pc-only">
-					<td>------ 轨迹 ------</td>
+					<td>----- flying -----</td>
 				</tr>
 				<tr class="tr-data tr-pc-only">
 					<td><span class="add-pos"
