--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		<canvas id="gsviewer-canvas"></canvas>
 		<div class="debug dev-panel prd-mode" style="border-radius:5px;display: none;">
 			<table style="width:330px;font-size: 13px;">
-				<tr class="tr-pc-only">
+				<tr class="tr-memory">
 					<td>memory:</td>
 					<td><span class="memory"></span></td>
 				</tr>
