大刀阔斧，夯实基础。改用 spx 格式，重新优化

--- a/index.html
+++ b/index.html
@@ -101,13 +101,10 @@
 					<td><span class="renderSplatCount">-</span> / <span class="visibleSplatCount">-</span> / <span
 							class="modelSplatCount">-</span></td>
 				</tr>
-				<tr class="tr-pc-only">
-					<td>models:</td>
-					<td><span class="renderModels">-</span> / <span class="models">-</span></td>
-				</tr>
 				<tr>
 					<td>scene:</td>
-					<td><span class="scene"></span> <span class="updateSceneData"></span></td>
+					<td><span class="scene"></span> <span class="cuts"></span></span>
+					</td>
 				</tr>
 				<tr class="tr-pc-only">
 					<td>scale:</td>
@@ -180,13 +177,12 @@
 						</input><span class="hide-watermark" title="hide watermarks">－</span>
 					</td>
 				</tr>
-				<tr class="tr-data">
+				<!-- <tr class="tr-data">
 					<td>
 						<span class="big-lod"
-							title="Large scene rendering based on LOD (480M, 30 million points)">大场景LOD</span>
-						<!-- <span class="show-map" title="地图">MAP</span> -->
+							title="Large scene rendering based on LOD">大场景LOD</span>
 					</td>
-				</tr>
+				</tr> -->
 				<tr class="tr-data tr-pc-only">
 					<td>----- marks -----</td>
 				</tr>
