--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
 					</td>
 				</tr>
 				<tr class="tr-pc-only">
+					<td>SH (0~3):</td>
+					<td class="shDegree">-</td>
+				</tr>
+				<tr class="tr-pc-only">
 					<td>scale:</td>
 					<td class="scale"></td>
 				</tr>
@@ -157,6 +161,11 @@
 							class="default-lightFactor" style="width: 80px;"
 							title="use default brightness">默认亮度</span><span class="sub-lightFactor"
 							title="Decrease the brightness by 10%">－</span></td>
+				</tr>
+				<tr class="tr-data tr-pc-only">
+					<td><span class="add-sh" title="Increase SH degree">＋</span><span class="default-sh"
+							style="width: 80px;" title="use default SH degree">Default SH</span><span class="sub-sh"
+							title="Decrease SH degree">－</span></td>
 				</tr>
 				<tr class="tr-data">
 					<td>----- demo -----</td>
