--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
 			</div>
 		</div>
 
-		<canvas id="gsviewer-canvas"></canvas>
 		<div class="debug dev-panel prd-mode" style="border-radius:5px;display: none;">
 			<table style="width:330px;font-size: 13px;">
 				<tr class="tr-memory">
@@ -219,7 +218,8 @@
 				</tr>
 			</table>
 		</div>
-		<script type="module" src="./src/index.ts"></script>
+	</div>
+	<script type="module" src="./src/index.ts"></script>
 </body>
 
 </html>
