demo: 3dGS in map

--- a/index.html
+++ b/index.html
@@ -185,6 +185,11 @@
 						</input><span class="hide-watermark" title="hide watermarks">－</span>
 					</td>
 				</tr>
+				<tr class="tr-data">
+					<td>
+						<span class="map" title="3DGS in map">地图场景</span>
+					</td>
+				</tr>
 				<!-- <tr class="tr-data">
 					<td>
 						<span class="big-lod"
