--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
                 ></div>
             </div>
 
+            <div id="map" class="hidden"></div>
+
             <div class="debug dev-panel prd-mode" style="border-radius: 5px; display: none">
                 <table style="width: 330px; font-size: 13px">
                     <tr class="tr-memory">
