--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
                         <td>scene:</td>
                         <td><span class="scene"></span> <span class="cuts"></span></td>
                     </tr>
-                    <tr class="tr-pc-only">
+                    <tr class="tr-pc-only map-hidden">
                         <td>SH (0~3):</td>
                         <td class="shDegree">-</td>
                     </tr>
-                    <tr class="tr-pc-only">
+                    <tr class="tr-pc-only map-hidden">
                         <td>scale:</td>
                         <td class="scale"></td>
                     </tr>
