--- a/index.html
+++ b/index.html
@@ -224,6 +224,11 @@
                             <span class="map" title="3DGS in map">地图场景</span>
                         </td>
                     </tr>
+                    <tr class="tr-data">
+                        <td>
+                            <span class="ppt" title="3D PPT">3D-PPT</span>
+                        </td>
+                    </tr>
                     <tr class="tr-data tr-pc-only">
                         <td>----- marks -----</td>
                     </tr>
